<resources>
    <string name="app_name">Assignment 5_2</string>
    <string name="count">COUNT</string>
    <string name="_0">0</string>
    <string name="toast">TOAST</string>
    <string name="zero">ZERO</string>
    <string name="scrolling_text">Scrolling Text</string>
    <string name="jaipur_s_best_tourist_place">Jaipur\'s best tourist place</string>
    <string name="amber_fort">Amer Fort or Amber Fort is a fort located in Amer, Rajasthan, India. Amer is a town with an area of 4 square kilometres (1.5 sq mi)[1] located 11 kilometres (6.8 mi) from Jaipur, the capital of Rajasthan. The town of Amer and the Amber Fort were originally built by Raja Man Singh and additions were, later, made by Sawai Jai Singh. Located high on a hill, it is the principal tourist attraction in Jaipur.[2][3] Amer Fort is known for its artistic style elements. With its large ramparts and series of gates and cobbled paths, the fort overlooks Maota Lake,[3][4][5][6] which is the main source of water for the Amer Palace.

Mughal architecture greatly influenced the architectural style of several buildings of the fort.[7][8][9] Constructed of red sandstone and marble, the attractive, opulent palace is laid out on four levels, each with a courtyard. It consists of the Diwan-e-Aam, or "Hall of Public Audience", the Diwan-e-Khas, or "Hall of Private Audience", the Sheesh Mahal (mirror palace), or Jai Mandir, and the Sukh Niwas where a cool climate is artificially created by winds that blow over a water cascade within the palace. Hence, the Amer Fort is also popularly known as the Amer Palace.[4] The palace was the residence of the Rajput Maharajas and their families. At the entrance to the palace near the fort\'s Ganesh Gate, there is a temple dedicated to Shila Devi, a goddess of the Chaitanya cult, which was given to Raja Man Singh when he defeated the Raja of Jessore, Bengal in 1604. (Jessore is now in Bangladesh).[3][10][11] Raja Man Singh had 12 queens so he made 12 rooms, one for each Queen. Each room had a staircase connected to the King’s room but the Queens were not to go upstairs. Raja Jai Singh had only one queen so he built one room equal to three old queen’s rooms.


A panoramic view of Amer Fort.
This palace, along with Jaigarh Fort, is located immediately above on the Cheel ka Teela (Hill of Eagles) of the same Aravalli range of hills. The palace and Jaigarh Fort are considered one complex, as the two are connected by a subterranean passage. This passage was meant as an escape route in times of war to enable the royal family members and others in the Amer Fort[12] to shift to the more redoubtable Jaigarh Fort.[4][13][14] Annual tourist visitation to the Amer Palace was reported by the Superintendent of the Department of Archaeology and Museums as 5000 visitors a day, with 1.4 million visitors during 2007.[1] At the 37th session of the World Heritage Committee held in Phnom Penh, Cambodia, in 2013, Amer Fort, along with five other forts of Rajasthan, was declared a UNESCO World Heritage Site as part of the group Hill Forts of Rajasthan.[15]</string>
    <string name="fort_name">Amber Fort</string>
    <string name="add_comment">Add Comment</string>
</resources>