<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/top_header"
        android:text="@string/scrolling_text"
        android:padding="15dp"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="3dp"
        android:background="#3F51B5"
        android:text="@string/jaipur_s_best_tourist_place"
        android:layout_below="@+id/top_header"/>

    <TextView
        android:id="@+id/tourist_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fort_name"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_below="@+id/city_name"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tourist_place">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/amber_fort"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_comment"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:layout_below="@+id/scroll_view"/>

        </LinearLayout>
    </ScrollView>




</RelativeLayout>


